--- a/package.json
+++ b/package.json
@@ -5,12 +5,33 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-		"serve": "tsc && node --es-module-specifier-resolution=node dist/index.js"
+    "test": "jest",
+    "serve": "tsc && node --es-module-specifier-resolution=node dist/index.js"
   },
   "keywords": [],
   "author": "misbiheyv",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "jest": "29.1.2",
+    "@types/jest": "^29.1.2",
+    "ts-jest": "29.0.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "collectCoverageFrom": [
+      "./src/**/*.ts"
+    ]
   }
 }
